# QGIS

./: CMakeLists.txt
src/auth/: CMakeLists.txt
src/auth/awssso/: CMakeLists.txt
src/auth/awssso/core/: qgsauthawsssomethod.cpp  qgsauthawsssomethod.h
src/auth/awssso/gui/: qgsauthawsssoedit.cpp
